<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clOperations"
        >
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/result"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvFirstValue"
        />
        <TextView
            android:id="@+id/tvFirstValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/tvResult"
            app:layout_constraintBottom_toTopOf="@id/btnOne"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvOperation"
            />
        <TextView
            android:id="@+id/tvOperation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/btnOne"
            app:layout_constraintStart_toEndOf="@id/tvFirstValue"
            app:layout_constraintEnd_toStartOf="@id/tvSecondValue"
            />
        <TextView
            android:id="@+id/tvSecondValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/btnOne"
            app:layout_constraintStart_toEndOf="@id/tvOperation"
            app:layout_constraintEnd_toEndOf="parent"
            />

    <Button
        android:id="@+id/btnOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_1"
        app:layout_constraintTop_toBottomOf="@id/tvFirstValue"
        app:layout_constraintBottom_toTopOf="@id/btnFour"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        />

    <Button
        android:id="@+id/btnTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_2"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        app:layout_constraintBottom_toTopOf="@id/btnFour"

        />

    <Button
        android:id="@+id/btnThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_3"
        app:layout_constraintTop_toTopOf="@id/btnOne"
        app:layout_constraintBottom_toTopOf="@id/btnSix"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_4"
        app:layout_constraintTop_toBottomOf="@id/btnOne"
        app:layout_constraintBottom_toTopOf="@id/btnSeven"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_5"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        app:layout_constraintBottom_toTopOf="@id/btnEight"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_6"
        app:layout_constraintTop_toTopOf="@id/btnFour"
        app:layout_constraintBottom_toTopOf="@id/btnNine"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_7"
        app:layout_constraintTop_toBottomOf="@id/btnFour"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTwo"
        />

    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_8"
        app:layout_constraintStart_toEndOf="@id/btnOne"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintEnd_toStartOf="@id/btnThree"
        />

    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/_9"
        app:layout_constraintTop_toTopOf="@id/btnSeven"
        app:layout_constraintBottom_toTopOf="@id/btnZero"
        app:layout_constraintStart_toEndOf="@id/btnTwo"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintTop_toBottomOf="@id/btnSeven"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clOperations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <Button
            android:id="@+id/btnClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equal"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnClear"
            />

        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnEqual"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnDev"
            />

        <Button
            android:id="@+id/btnDev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dev"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnEqual"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnMultiply"
            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_plus"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnMultiply"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnMinus"
            />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/_minus"
            android:background="#ddd"
            android:textColor="@color/colorAccent"
            android:textSize="33sp"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/btnDev"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnPlus"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
